[package]
name = "arkworks_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4"

ark-std = { version = "^0.3.0", default-features = true }
ark-relations = { version = "^0.3.0", default-features = true }
ark-snark = { version = "^0.3.0", default-features = true }
ark-r1cs-std = { version = "^0.3.0", default-features = true }
ark-groth16 = { version = "^0.3.0", default-features = true }
ark-bls12-381 = { version = "^0.3.0", default-features = true }
ark-test-curves = { version = "^0.3.0", default-features = true, features = [ "bls12_381_scalar_field" ] }
ark-ff = { version = "^0.3.0", default-features = true }